[TG-63] Cleanup code
