# functions/docs/swagger.yaml
@@ -1,7 +1,7 @@
 basePath: null
 definitions:
     LatLong:
-        description: ""
+        description: 'Latitude-Longitude type'
         properties:
             latitude:
                 type: number
@@ -16,7 +16,7 @@ definitions:
             - latitude
             - longitude
     PockMessage:
-        description: ""
+        description: "Type of the PockMessage\r\n\r\nIt has no validator as it is an outgoing object (database -> external device)."
         properties:
             id:
                 type: object
@@ -37,6 +37,9 @@ definitions:
             user:
                 type: string
                 description: ""
+            media:
+                type: string
+                description: ""
         type: object
         required:
             - id
@@ -44,7 +47,7 @@ definitions:
             - location
             - dateInserted
     CreatePockRestInput:
-        description: ""
+        description: 'Type for the input object of the endpoint /pocks'
         properties:
             message:
                 type: string
@@ -55,6 +58,9 @@ definitions:
                 type: boolean
                 description: ""
             category:
+                type: string
+                description: ""
+            mediaUrl:
                 type: string
                 description: ""
         type: object
